# wc-test

./: .gitignore  README.md  api_scraper.py  ds.ipynb  github_stars.py  hackernews.py  hn_github_integration.py  main.py  main_with_stars.py  models.py  pyproject.toml  scraper.py
.ipynb_checkpoints/: ds-checkpoint.ipynb
data/: hackernews_7days.csv
data/.ipynb_checkpoints/: hackernews_6months-checkpoint.csv  hackernews_6months_with_stars-checkpoint.csv
